Add head + viewport.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 
 <head>
 <meta charset=UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EXEMPLO</title>
 </head>
 
