Apresentacao dos titulos

--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EXEMPLO</title>
 </head>
-
+<body>
+  <h1>Exemplo de Cabeçalhos</h1>  
+  <h2>Segundo Titulo</h2>
+  <h3>Terceiro Titulo</h3>
+  <h4>Quarto Titulo</h4>
+  <h5>Quinto Titulo</h5>
+  <h6>Sexto Titulo</h6>
+</body>
 </html>
+
