--- a/index.html
+++ b/index.html
@@ -11,12 +11,33 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <title>EXEMPLO</title>
 </head>
 <body>
-  <h1>Exemplo de Cabeçalhos</h1>  
+  <h1>Exemplo de quebra de linha e elementos de linha e bloco
+
+  </h1>
+  
+  <div style="border: solid red 2px">
+    <p style="border: solid blue 2px">A div é um elemento de bloco, porque ocupa a linha toda! Já o paragrafo e um elemento de linha e bloco!
+    
+    </p>
+    <br>
+    <span style="border: solid green 2px; background-color: black; color: beige">Agora vem o Span e te mostra que os elementos de linha sao os elementos mais simples porque ocupam o espaco do conteudo no viewport</span>
+  </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    <!-- <h1>Exemplo de Cabeçalhos</h1>  
   <h2>Segundo Titulo</h2>
   <h3>Terceiro Titulo</h3>
   <h4>Quarto Titulo</h4>
   <h5>Quinto Titulo</h5>
-  <h6>Sexto Titulo</h6> 
+  <h6>Sexto Titulo</h6> -->
 </body>
 </html>
 
