--- a/index.html
+++ b/index.html
@@ -11,18 +11,27 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <title>EXEMPLO</title>
 </head>
 <body>
-  <h1>Exemplo de quebra de linha e elementos de linha e bloco
+<div class="container">
+<header>
+<h1>Minha Página</h1>
+<nav>
+<ul>
+  <li> <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a></li>
+  <li> <a href="https://www.google.com.br/" target="_blank">GOOGLE</a></li>
+  <li> <a href="https://github.com/" target="_blank">Github</a> </li>
+</ul>
+</nav>
+</header>
 
-  </h1>
-  
-  <div style="border: solid red 2px">
-    <p style="border: solid blue 2px">A div é um elemento de bloco, porque ocupa a linha toda! Já o paragrafo e um elemento de linha e bloco!
-    
-    </p>
-    <br>
-    <span style="border: solid green 2px; background-color: black; color: beige">Agora vem o Span e te mostra que os elementos de linha sao os elementos mais simples porque ocupam o espaco do conteudo no viewport</span>
-  </div>
-  
+
+
+
+
+
+
+
+
+</div>
   
   
   
