--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <h1>Minha Página</h1>
 <nav>
 <ul>
-  <li> <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a></li>
-  <li> <a href="https://www.google.com.br/" target="_blank">GOOGLE</a></li>
-  <li> <a href="https://github.com/" target="_blank">Github</a> </li>
-</ul>
+  <li><a href="#">Help</a></li>
+  <li><a href="#">Contact</a></li>
+  <li><a href="#">About</a></li>
+  </ul>
 </nav>
 </header>
 
@@ -30,6 +30,16 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam nostrum corrupti molestiae nisi incidunt! Sit ut amet nesciunt dicta reprehenderit optio praesentium autem. Maxime suscipit ducimus veniam, unde amet totam aperiam minus nesciunt maiores voluptate incidunt et ipsa optio, dolores culpa, obcaecati nam? Iure tempora blanditiis architecto nostrum atque. Ad voluptatum exercitationem provident hic consequatur harum omnis pariatur iusto, sint maiores temporibus cupiditate tempora veritatis molestias nisi neque inventore, iste ab culpa dolorem ex placeat veniam. Corrupti dolorum commodi qui rerum cupiditate! Libero doloremque eveniet soluta hic! Illum dolorem repudiandae voluptatibus minima modi suscipit aliquam amet minus praesentium. Unde, minus!</p>
 </section>
 
+<footer class="rodape">
+  <nav>
+    <ul>
+      <li> <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a></li>
+      <li> <a href="https://www.google.com.br/" target="_blank">GOOGLE</a></li>
+      <li> <a href="https://github.com/" target="_blank">Github</a> </li>
+    </ul>
+  </nav>
+  <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
+</footer>
 
 
 
@@ -37,21 +47,6 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 
 
 </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-    <!-- <h1>Exemplo de Cabeçalhos</h1>  
-  <h2>Segundo Titulo</h2>
-  <h3>Terceiro Titulo</h3>
-  <h4>Quarto Titulo</h4>
-  <h5>Quinto Titulo</h5>
-  <h6>Sexto Titulo</h6> -->
 </body>
 </html>
 
