add pages and changes

--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 </head>
 <body>
 <div class="container">
-<header>
+<header class="cabeçalho">
 <h1>Minha Página</h1>
 <nav>
 <ul>
-  <li><a href="#">Help</a></li>
-  <li><a href="#">Contact</a></li>
-  <li><a href="#">About</a></li>
+  <li><a href="./paginas/help.html">Help</a></li>
+  <li><a href="./paginas/contact.html">Contact</a></li>
+  <li><a href="./paginas/about.html">About</a></li>
   </ul>
 </nav>
 </header>
+<hr>
 
-<section>
+<section class="conteudo">
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dicta provident sit similique deserunt magni esse explicabo iusto autem laboriosam eos, incidunt quas temporibus, reprehenderit omnis non, alias itaque? Ea suscipit, sit illo non natus eius numquam, quia nostrum perspiciatis molestiae error nihil distinctio unde sequi, impedit dicta in. Sit rerum tempore delectus atque commodi dolor quos nostrum in assumenda laboriosam necessitatibus quae aut consequuntur minus culpa alias magni quod, quibusdam similique praesentium minima repellat. Accusantium vel odio, voluptatibus accusamus dolorum est aliquid voluptas hic assumenda dignissimos blanditiis ut exercitationem vero cupiditate nulla alias laborum nam aut natus! Culpa, tenetur.</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aperiam, quod sed, animi non fuga unde quasi numquam commodi nesciunt, nostrum facilis veritatis amet? Quo obcaecati non quos dignissimos, ad expedita incidunt placeat omnis sunt atque, eos laudantium! Quo maiores quaerat assumenda, earum voluptatum pariatur nulla quos praesentium blanditiis consequatur?</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro qui voluptate consequatur vel suscipit nostrum quis aperiam adipisci corporis unde temporibus at aspernatur blanditiis asperiores distinctio accusamus dolor, cupiditate doloremque quaerat recusandae esse aliquam reiciendis consectetur! Ut non earum esse tenetur quas tempore pariatur recusandae, dolore reprehenderit, quibusdam nam corrupti.</p>
