--- a/paginas/contact.html
+++ b/paginas/contact.html
@@ -6,6 +6,19 @@
     <title>CONTACT</title>
 </head>
 <body>
- <h1>CONTACT</h1>   
+    <h1>CONTACT</h1>
+    <div class="container">
+        <header class="cabeçalho">
+        <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./help.html">Help</a></li>
+          <li><a href="./about.html">About</a></li>
+          </ul>
+        </nav>
+        </header>
+        <hr>
+
+    </div>
 </body>
 </html>
