--- a/paginas/about.html
+++ b/paginas/about.html
@@ -6,6 +6,17 @@
     <title>ABOUT</title>
 </head>
 <body>
-   <h1>ABOUT</h1> 
+   <h1>ABOUT</h1>
+   <div class="container">
+    <header class="cabeçalho">
+    <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="./help.html">Help</a></li>
+      <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    </header>
+    <hr> 
 </body>
 </html>
