--- a/paginas/help.html
+++ b/paginas/help.html
@@ -6,6 +6,19 @@
     <title>HELP</title>
 </head>
 <body>
-   <h1>HELP</h1> 
+    <h1>HELP</h1>
+    <div class="container">
+        <header class="cabeçalho">
+        <nav>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./about.html">About</a></li>
+          </ul>
+        </nav>
+        </header>
+        <hr>
+
+    </div>
 </body>
 </html>
