--- a/index.html
+++ b/index.html
@@ -14,21 +14,60 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <div class="container">
 <header class="cabeçalho">
 <h1>Minha Página</h1>
-<nav>
+<nav class="menu">
 <ul>
   <li><a href="./paginas/help.html">Help</a></li>
-  <li><a href="./paginas/contact.html">Contact</a></li>
   <li><a href="./paginas/about.html">About</a></li>
+  <li><a href="./paginas/contact.html">Contact</a></li>
   </ul>
 </nav>
 </header>
 <hr>
 
 <section class="conteudo">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum dicta provident sit similique deserunt magni esse explicabo iusto autem laboriosam eos, incidunt quas temporibus, reprehenderit omnis non, alias itaque? Ea suscipit, sit illo non natus eius numquam, quia nostrum perspiciatis molestiae error nihil distinctio unde sequi, impedit dicta in. Sit rerum tempore delectus atque commodi dolor quos nostrum in assumenda laboriosam necessitatibus quae aut consequuntur minus culpa alias magni quod, quibusdam similique praesentium minima repellat. Accusantium vel odio, voluptatibus accusamus dolorum est aliquid voluptas hic assumenda dignissimos blanditiis ut exercitationem vero cupiditate nulla alias laborum nam aut natus! Culpa, tenetur.</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aperiam, quod sed, animi non fuga unde quasi numquam commodi nesciunt, nostrum facilis veritatis amet? Quo obcaecati non quos dignissimos, ad expedita incidunt placeat omnis sunt atque, eos laudantium! Quo maiores quaerat assumenda, earum voluptatum pariatur nulla quos praesentium blanditiis consequatur?</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro qui voluptate consequatur vel suscipit nostrum quis aperiam adipisci corporis unde temporibus at aspernatur blanditiis asperiores distinctio accusamus dolor, cupiditate doloremque quaerat recusandae esse aliquam reiciendis consectetur! Ut non earum esse tenetur quas tempore pariatur recusandae, dolore reprehenderit, quibusdam nam corrupti.</p>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam nostrum corrupti molestiae nisi incidunt! Sit ut amet nesciunt dicta reprehenderit optio praesentium autem. Maxime suscipit ducimus veniam, unde amet totam aperiam minus nesciunt maiores voluptate incidunt et ipsa optio, dolores culpa, obcaecati nam? Iure tempora blanditiis architecto nostrum atque. Ad voluptatum exercitationem provident hic consequatur harum omnis pariatur iusto, sint maiores temporibus cupiditate tempora veritatis molestias nisi neque inventore, iste ab culpa dolorem ex placeat veniam. Corrupti dolorum commodi qui rerum cupiditate! Libero doloremque eveniet soluta hic! Illum dolorem repudiandae voluptatibus minima modi suscipit aliquam amet minus praesentium. Unde, minus!</p>
+
+<div>
+  <h2>HELP</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quidem nam pariatur est mollitia explicabo possimus laudantium facere. Natus at omnis ab assumenda eius rerum, voluptatibus iure libero excepturi tempore adipisci suscipit eum accusantium autem facilis! Sit velit assumenda ipsa culpa inventore alias iure. Accusantium quis quidem officiis iusto distinctio sequi, dolores voluptatem error maiores unde quos labore eos aperiam rerum velit fugit nostrum provident praesentium repudiandae! Dolores aliquid voluptas doloribus, dolor est reprehenderit, perferendis quisquam sed iste ea, fugiat animi repellendus quidem dolorum laudantium nulla sapiente magnam ad assumenda blanditiis voluptatibus dolore commodi! Dolor soluta omnis cumque alias neque?</p>
+  <a href="./paginas/help.html">Mais...</a>
+</div>
+
+<div>
+  <h2>ABOUT</h2>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti magni iste pariatur quod quis qui, harum voluptatem ratione velit tenetur.</p>
+    <a href="./paginas/about.html">Mais...</a>
+</div>
+
+<div id="contact">
+<h2>CONTACT</h2>
+<form>
+  <fieldset>
+    <legend>Costumer Data</legend>
+    <div>
+      <label for="idNm">Nome:</label>
+      <input 
+      type="text" 
+      name="txtNm" 
+      id="idNm" 
+      placeholder="Digite seu nome"/>
+    </div>
+    
+    <div>
+      <label for="idEmail">Nome:</label>
+      <input 
+      type="email" 
+      name="txtEmail" 
+      id="idEmail" 
+      placeholder="Digite seu email"/>
+    </div>
+    
+    <div>
+      <button type="button">Send</button>
+    </div>
+
+  </fieldset>
+</form>
+</div>
 </section>
 
 <footer class="rodape">
@@ -50,4 +89,3 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 </div>
 </body>
 </html>
-
