criacao de imagens com links e navegacao relativa

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <ul>
   <li><a href="./paginas/help.html">Help</a></li>
   <li><a href="./paginas/about.html">About</a></li>
-  <li><a href="./paginas/contact.html">Contact</a></li>
+  <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 </header>
@@ -74,8 +74,8 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
   <nav>
     <ul>
       <li> <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a></li>
-      <li> <a href="https://www.google.com.br/" target="_blank">GOOGLE</a></li>
-      <li> <a href="https://github.com/" target="_blank">Github</a> </li>
+      <li> <a href="https://www.google.com.br/" target="_blank"> <img src="img/chrome.png" alt="Logo do Google" width="2%"> </a></li>
+      <li> <a href="https://github.com/" target="_blank"> Github </a> </li>
     </ul>
   </nav>
   <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
