--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
 <meta charset=UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EXEMPLO</title>
+
+
+<link rel="stylesheet" href="./css/estilo.css">
+
 </head>
+
+
+
 <body>
-<div class="container">
+<div id="container">
 <header class="cabeçalho">
 <h1>Minha Página</h1>
 <nav class="menu">
@@ -80,9 +87,6 @@ The <!DOCTYPE html> declaration defines that this document is an HTML5 document-
   </nav>
   <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
 </footer>
-
-
-
 
 
 
