--- a/index.html
+++ b/index.html
@@ -1,95 +1,124 @@
-<!DOCTYPE HTML><!-- Isso é um DTD de HTML5 -->
-<!-- Isso é um comentário
-The <!DOCTYPE html> declaration defines that this document is an HTML5 document-->
-<!-- O HTML é a tag raiz estrutural html, todo o conteúdo deve ser criado dentro dele.-->
-<html>
-<!-- The <head> element contains meta information about the HTML page-->
+<!DOCTYPE html>
+<!-- Isso é um DTD de HTML5 -->
+<!--
+Isso é um comentário
+A <!DOCTYPE html> document type definition, declaração define que este documento é um documento HTML5.
+-->
 
-<head>
-<meta charset=UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EXEMPLO</title>
+<!-- O HTML é a tag raiz da estrutura html, todo o conteúdo deve ser criado dentro dele.
+-->
+<html lang="pt-br">
+  <!-- 
+		<head> Elemento contém meta informações sobre a página HTML
+	-->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>EXEMPLO</title>
 
+    <link rel="stylesheet" href="./css/estilo.css">
 
-<link rel="stylesheet" href="./css/estilo.css">
+  </head>
 
-</head>
+  <body>
+    <div id="container">
+      <header class="cabecalho">
+        <h1>Minha Página</h1>
+        <nav class="menu">
+          <!-- ul = unordered list e dentro dela somente podemos adicionar elementos li = list item.-->
+          <ul>
+            <li><a href="./paginas/help.html">Help</a></li>
+            <li><a href="./paginas/about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
 
+      <hr />
 
+      <section class="conteudo">
+        <div>
+          <h2 class="tit-sec">HELP</h2>
+          <p>
+            Help - Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
+            error cumque quas dolorem quaerat vero! Quaerat magnam pariatur, aut
+            eius perspiciatis aperiam delectus, molestias beatae accusantium
+            molestiae ratione ipsum earum necessitatibus cupiditate fugit autem
+            libero enim tempora. Voluptatem vero aliquid saepe soluta
+            perferendis facilis assumenda, eligendi dolor maxime quae nobis esse
+            explicabo corporis obcaecati quisquam rem accusantium ex fuga itaque
+            neque optio tempora necessitatibus. Mollitia modi sed eum veritatis
+            id rem commodi accusantium soluta repudiandae, dolorum,
+            necessitatibus laudantium molestiae quae itaque nesciunt quidem
+            nobis ducimus possimus harum quisquam! Perferendis nisi corrupti
+            quas nam cumque minima. Similique commodi molestias voluptate.
+            Magnam.
+          </p>
+          <a href="./paginas/help.html">Mais...</a>
+        </div>
 
-<body>
-<div id="container">
-<header class="cabeçalho">
-<h1>Minha Página</h1>
-<nav class="menu">
-<ul>
-  <li><a href="./paginas/help.html">Help</a></li>
-  <li><a href="./paginas/about.html">About</a></li>
-  <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-</header>
-<hr>
+        <div>
+          <h2 class="tit-sec">ABOUT</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            eaque expedita adipisci placeat omnis numquam illum sunt dolore quo
+            velit.
+          </p>
+          <a href="./paginas/about.html">Mais...</a>
+        </div>
 
-<section class="conteudo">
+        <div id="contact">
+          <h2 class="tit-sec">CONTACT</h2>
+          <form>
+            <fieldset>
+              <legend>Customer Data</legend>
+              <div>
+                <label for="idNm">Nome:</label>
+                <input
+                  type="text"
+                  name="txtNm"
+                  id="idNm"
+                  placeholder="Digite seu nome"
+                />
+              </div>
+              <div>
+                <label for="idEmail">Email:</label>
+                <input
+                  type="email"
+                  name="txtEmail"
+                  id="idEmail"
+                  placeholder="Digite seu email"
+                />
+              </div>
+              <div>
+                <button type="button">Send</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </section>
 
-<div>
-  <h2>HELP</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quidem nam pariatur est mollitia explicabo possimus laudantium facere. Natus at omnis ab assumenda eius rerum, voluptatibus iure libero excepturi tempore adipisci suscipit eum accusantium autem facilis! Sit velit assumenda ipsa culpa inventore alias iure. Accusantium quis quidem officiis iusto distinctio sequi, dolores voluptatem error maiores unde quos labore eos aperiam rerum velit fugit nostrum provident praesentium repudiandae! Dolores aliquid voluptas doloribus, dolor est reprehenderit, perferendis quisquam sed iste ea, fugiat animi repellendus quidem dolorum laudantium nulla sapiente magnam ad assumenda blanditiis voluptatibus dolore commodi! Dolor soluta omnis cumque alias neque?</p>
-  <a href="./paginas/help.html">Mais...</a>
-</div>
-
-<div>
-  <h2>ABOUT</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti magni iste pariatur quod quis qui, harum voluptatem ratione velit tenetur.</p>
-    <a href="./paginas/about.html">Mais...</a>
-</div>
-
-<div id="contact">
-<h2>CONTACT</h2>
-<form>
-  <fieldset>
-    <legend>Costumer Data</legend>
-    <div>
-      <label for="idNm">Nome:</label>
-      <input 
-      type="text" 
-      name="txtNm" 
-      id="idNm" 
-      placeholder="Digite seu nome"/>
+      <footer class="cabecalho">
+        <nav class="tit-sec">
+          <ul>
+            <li>
+              <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a>
+            </li>
+            <li>
+              <a href="https://www.google.com.br/" target="_blank">
+                <img src="./img/chrome.png" alt="Logo do Google" width="2%" />
+              </a>
+            </li>
+            <li><a href="https://github.com/" target="_blank">Github</a></li>
+          </ul>
+        </nav>
+        <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
+      </footer>
     </div>
-    
+
     <div>
-      <label for="idEmail">Nome:</label>
-      <input 
-      type="email" 
-      name="txtEmail" 
-      id="idEmail" 
-      placeholder="Digite seu email"/>
-    </div>
-    
-    <div>
-      <button type="button">Send</button>
+      Esta div está fora dos domínios do container...
     </div>
 
-  </fieldset>
-</form>
-</div>
-</section>
-
-<footer class="rodape">
-  <nav>
-    <ul>
-      <li> <a href="https://www2.fiap.com.br/" target="_blank"> FIAP </a></li>
-      <li> <a href="https://www.google.com.br/" target="_blank"> <img src="img/chrome.png" alt="Logo do Google" width="2%"> </a></li>
-      <li> <a href="https://github.com/" target="_blank"> Github </a> </li>
-    </ul>
-  </nav>
-  <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
-</footer>
-
-
-
-</div>
-</body>
+  </body>
 </html>
