add header color

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ A <!DOCTYPE html> document type definition, declaração define que este documen
         </div>
       </section>
 
-      <footer class="cabecalho">
+      <footer class="rodape">
         <nav class="tit-sec">
           <ul>
             <li>
@@ -115,10 +115,5 @@ A <!DOCTYPE html> document type definition, declaração define que este documen
         <p>Todos os direitos reservados <small>2024 - &copy;</small></p>
       </footer>
     </div>
-
-    <div>
-      Esta div está fora dos domínios do container...
-    </div>
-
   </body>
 </html>
