add header a todas as paginas

--- a/paginas/about.html
+++ b/paginas/about.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
+
+    <link rel="stylesheet" href="../css/paginas.css">
 </head>
+
 <body>
    <h1>ABOUT</h1>
    <div class="container">
-    <header class="cabeçalho">
+    <header class="cabecalho">
     <nav>
     <ul>
       <li><a href="../index.html">Home</a></li>
