--- a/paginas/help.html
+++ b/paginas/help.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELP</title>
+
+    <link rel="stylesheet" href="../css/paginas.css">
 </head>
+
 <body>
     <h1>HELP</h1>
     <div class="container">
-        <header class="cabeçalho">
+        <header class="cabecalho">
         <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
